# AgenticOS

./: .gitignore  Cargo.toml  README.md  daemon-test-err.txt
configs/: dev.toml  safe-local.toml
crates/agenticos-agents/: Cargo.toml
crates/agenticos-agents/src/: action_proposal.rs  device.rs  dummy.rs  file.rs  lib.rs  memory.rs  process.rs  recommendation_consumer.rs  security.rs  supervisor.rs
crates/agenticos-application/: Cargo.toml
crates/agenticos-application/src/: lib.rs  ports.rs  runtime.rs  supervision.rs  use_cases.rs
crates/agenticos-bench/: Cargo.toml
crates/agenticos-bench/src/: compare.rs  experiment.rs  harness.rs  lib.rs  replay.rs  workload.rs
crates/agenticos-bus/: Cargo.toml
crates/agenticos-bus/src/: bus.rs  envelope.rs  lib.rs  store.rs  topic.rs
crates/agenticos-cli/: Cargo.toml
crates/agenticos-cli/src/: main.rs
crates/agenticos-daemon/: Cargo.toml
crates/agenticos-daemon/src/: bootstrap.rs  config.rs  main.rs  service.rs  tests.rs
crates/agenticos-dashboard/: Cargo.toml
crates/agenticos-dashboard/src/: api.rs  models.rs
crates/agenticos-domain/: Cargo.toml
crates/agenticos-domain/src/: action.rs  action_graph.rs  agent.rs  decision.rs  error.rs  event.rs  ids.rs  intent.rs  lib.rs  metrics.rs  observation.rs  plan.rs  proposal.rs  recommendation.rs  workload.rs
crates/agenticos-executor/: Cargo.toml
crates/agenticos-executor/src/: action_executor.rs  dry_run.rs  executor.rs  lib.rs  linux.rs  noop.rs  rollback.rs  traits.rs
crates/agenticos-intelligence/: Cargo.toml
crates/agenticos-intelligence/src/: action_graph.rs  action_store.rs  cache.rs  classifier.rs  config.rs  gemini.rs  intent_agent.rs  intent_parser.rs  intent_store.rs  lib.rs  mock.rs  plan_store.rs  planner_agent.rs  provider.rs  recommendation.rs  tool_registry.rs  types.rs
crates/agenticos-observe/: Cargo.toml
crates/agenticos-observe/src/: lib.rs  linux.rs  noop.rs  parsing.rs  sampler.rs  traits.rs
crates/agenticos-policy/: Cargo.toml
crates/agenticos-policy/src/: action_policy.rs  budget.rs  capability.rs  invariant.rs  lib.rs  policy_input.rs  policy_kernel.rs
crates/agenticos-runtime/: Cargo.toml
crates/agenticos-runtime/src/: agent_runtime.rs  lib.rs  lifecycle.rs  registry.rs
crates/agenticos-safety/: Cargo.toml
crates/agenticos-safety/src/: action_validator.rs  governor.rs  lib.rs  veto.rs
dashboard/: README.md
data/: agenticos-dev.db  agenticos-safe.db  daemon-audit-err.txt  daemon-audit-out.txt  daemon-audit2-err.txt  daemon-audit2-out.txt  daemon-debug-err.txt  daemon-debug-out.txt  daemon-debug3-err.txt  daemon-debug3-out.txt  daemon-dev-err-final.txt  daemon-dev-err-final2.txt  daemon-dev-err.txt  daemon-dev-err3.txt  daemon-dev-err4.txt  daemon-dev-final.txt  daemon-dev-out2.txt  daemon-dev-out3.txt  daemon-err2.txt  daemon-err3.txt  daemon-out.txt  daemon-out2.txt  daemon-out3.txt  daemon-verify-err.txt  daemon-verify-out.txt  daemon-verify2-err.txt  daemon-verify2-out.txt  recommendation-cache.db
docs/: alpha1-review.md  architecture.md  current-state.md  research-hypothesis.md  threat-model.md
docs/adr/: 0001-agent-governed-os-policy-plane.md  0001-use-rust-workspace.md  0002-clean-architecture.md  0003-event-driven-agent-runtime.md  0003-privilege-model.md  0004-linux-as-trusted-substrate.md  0004-observation-layer-purity.md  0005-agents-never-hold-authority.md  0005-observation-sampling.md  0006-executor-authority-boundary.md  0008-multi-agent-coordination.md  0009-security-agent-authority.md  0010-incident-handling-model.md  0011-policy-input-model.md  0012-intelligence-layer-boundary.md
docs/architecture/: current-architecture.md  health-report.md
docs/research/: alpha1-architecture-freeze.md  alpha1-completion-report.md  alpha1-findings.md  alpha4-governance-validation.md  alpha5-real-kernel-validation.md  governance-model.md  phase6-1-workload-classification.md  phase6-2-bridge-report.md  phase6-foundation-report.md
docs/security/: gemini-api-key-management.md
experiments/: README.md
experiments/alpha3/figures/: S2-budget-violation-profile.csv  S5-adversarial-profile.csv
experiments/alpha3/results/: S1-proposal-conflict-aggregate.json  S1-proposal-conflict-samples.csv  S2-budget-violation-aggregate.json  S3-incident-driven-aggregate.json  S3-incident-driven-samples.csv  S4-escalation-chain-aggregate.json  S4-escalation-chain-samples.csv  S5-adversarial-aggregate.json
experiments/alpha3/tables/: alpha3-summary-table.csv
experiments/alpha4/results/: alpha4-output.txt  alpha4-results.json
experiments/figures/e1-determinism/: determinism-data.csv
experiments/figures/e2-safety-governor/: safety-impact-data.csv
experiments/figures/e3-multi-agent/: governance-profile.csv
experiments/figures/e4-resource-governance/: resource-throughput.csv
experiments/figures/e5-governance-overhead/: latency-comparison.csv
experiments/results/e1-determinism/: cpu-contention-1000replay.json  incident-storm-1000replay.json  memory-pressure-1000replay.json  mixed-1000replay.json  process-explosion-1000replay.json
experiments/results/e2-safety-governor/: memory-pressure-comparative.csv  memory-pressure-comparative.json  mixed-comparative.csv  mixed-comparative.json  process-explosion-comparative.csv  process-explosion-comparative.json
experiments/results/e3-multi-agent/: mixed-governance.csv  (+1 more)
experiments/tables/: e1-determinism-table.csv  e2-safety-impact-table.csv  e3-governance-table.csv  e4-resource-table.csv  e5-overhead-table.csv
policies/: default.toml
(+6 files in other folders)
