[package]
name = "agenticos-agents"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
[dependencies]
agenticos-domain = { path = "../agenticos-domain" }
[dev-dependencies]
agenticos-application = { path = "../agenticos-application" }
agenticos-bus = { path = "../agenticos-bus" }
agenticos-executor = { path = "../agenticos-executor" }
agenticos-policy = { path = "../agenticos-policy" }
agenticos-runtime = { path = "../agenticos-runtime" }
agenticos-safety = { path = "../agenticos-safety" }

