[package]
name = "agenticos-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
[dependencies]
agenticos-agents = { path = "../agenticos-agents" }
agenticos-application = { path = "../agenticos-application" }
agenticos-domain = { path = "../agenticos-domain" }
agenticos-executor = { path = "../agenticos-executor" }
agenticos-policy = { path = "../agenticos-policy" }
agenticos-runtime = { path = "../agenticos-runtime" }
agenticos-safety = { path = "../agenticos-safety" }
csv = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

