[package]
name = "agenticos-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.98"

[[bin]]
name = "agenticos"
path = "src/main.rs"

[dependencies]
agenticos-bus = { path = "../agenticos-bus" }
agenticos-domain = { path = "../agenticos-domain" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
