[package]
name = "agenticos-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
[dependencies]
agenticos-agents = { path = "../agenticos-agents" }
agenticos-application = { path = "../agenticos-application" }
agenticos-bus = { path = "../agenticos-bus" }
agenticos-domain = { path = "../agenticos-domain" }
agenticos-executor = { path = "../agenticos-executor" }
agenticos-observe = { path = "../agenticos-observe" }
agenticos-policy = { path = "../agenticos-policy" }
agenticos-runtime = { path = "../agenticos-runtime" }
agenticos-safety = { path = "../agenticos-safety" }
agenticos-intelligence = { path = "../agenticos-intelligence" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
dotenvy = "0.15"

