[package]
name = "agenticos-intelligence"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
[dependencies]
agenticos-domain = { path = "../agenticos-domain" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
[dev-dependencies]
agenticos-application = { path = "../agenticos-application" }
agenticos-bus = { path = "../agenticos-bus" }
agenticos-runtime = { path = "../agenticos-runtime" }

