[package]
name = "agenticos-safety"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.98"

[dependencies]
agenticos-application = { path = "../agenticos-application" }
agenticos-domain = { path = "../agenticos-domain" }
agenticos-policy = { path = "../agenticos-policy" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
agenticos-runtime = { path = "../agenticos-runtime" }
